# Project_NearBuy

./: db.txt
.trae/documents/: Backend Refactor_ Consolidate Schemas Into Models, Strengthen Auth, Audit Relations, and Tests.md  Frontend Revamp_ Shopkeeper CRUD, Auth, Search, RBAC, UX, Tests, Performance.md
.vercel/: project.json
backend/: .env  README.md  main.py  nearbuy.db  nearbuy.db-shm  nearbuy.db-wal  pyproject.toml
backend/app/: __init__.py  seed.py
backend/app/core/: auth.py  config.py  imagekit.py  notify.py  security.py
backend/app/db/: session.py  types.py
backend/app/maintenance/: health.py
backend/app/middleware/: metrics.py
backend/app/models/: __init__.py  admin.py  admin_credential.py  auth_dto.py  category.py  history.py  log.py  owner.py  product.py  review.py  security.py  shop.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  owners.py  products.py  realtime.py  reviews.py  search.py  shops.py  uploads.py  users.py  verification.py
backend/app/schemas/: auth.py  owner.py  product.py  review.py  shop.py  user.py
backend/app/scripts/: comprehensive_seed.sql  generate_dummy_data.py  list_owners.py  migrate_category_to_text.sql  sqlite_from_mssql.sql  sqlite_schema.sql  sqlite_seed.sql
backend/scripts/: locustfile.py  migrate_gstin.py
backend/tests/: test_admin_security.py  test_auth.py  test_products_in_city.py  test_relationships.py  test_shops_by_city.py  test_users_list.py  test_validation.py
frontend/: README.selenium.md  index.html  package-lock.json  package.json  tailwind.config.js
(+29 files in other folders)
