[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "imagekitio>=4.2.0",
    "requests>=2.32.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyotp>=2.9.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
